src/test/compile-fail/missing-main.rs
// error-pattern:Main function not found
fn mian() { }